--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Theodor Shaytanov <brainenjii@gmail.com>",
-  "license": "ISC",
+  "license": "MIT",
   "browser": {
     "lodash": "./browser/lodash-fake.js",
     "async": "./browser/async-fake.js"
@@ -18,12 +18,5 @@
   "dependencies": {
     "async": "^0.9.0",
     "lodash": "^3.7.0"
-  },
-  "browserify": {
-    "transform": [ "browserify-shim" ]
-  },
-  "browserify-shim": {
-    "async": "global:async",
-    "lodash": "global:_"
   }
 }
