--- a/.eslintrc
+++ b/.eslintrc
@@ -1,7 +1,7 @@
 {
   "env": {
-    "browser": true,
-    "node": true
+    "node": true,
+    "browser": true
   },
   "global-strict": [2, "always"],
   "rules": {
@@ -47,7 +47,6 @@
     "no-caller": 2,
     "no-div-regex": 2,
     "no-else-return": 2,
-    "no-empty-label": 2,
     "no-eq-null": 2,
     "no-eval": 2,
     "no-extend-native": 2,
@@ -139,13 +138,11 @@
     "require-jsdoc": 2,
     "semi-spacing": 2,
     "semi": 2,
-    "space-after-keywords": 2,
-    "space-before-keywords": 2,
+    "keyword-spacing": 2,
     "space-before-blocks": 2,
     "space-before-function-paren": 2,
     "space-in-parens": 2,
     "space-infix-ops": 2,
-    "space-return-throw-case": 2,
     "space-unary-ops": 2,
     "spaced-comment": 2,
     "wrap-regex": 2,
@@ -156,9 +153,6 @@
     "describe": false,
     "beforeEach": false,
     "before": false,
-    "it": false,
-    "$$": false,
-    "EW": false,
-    "webix": false
+    "it": false
   }
 }
