--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "extWebix",
-  "version": "1.0.0",
+  "version": "0.2.1",
   "description": "",
-  "main": "index.js",
+  "main": "lib/index.js",
   "directories": {
     "test": "tests"
   },
@@ -18,5 +18,9 @@
   "dependencies": {
     "async": "^0.9.0",
     "lodash": "^3.7.0"
+  },
+  "devDependencies": {
+    "gulp": "^3.9.0",
+    "gulp-browserify": "^0.5.1"
   }
 }
